WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63873
ResourceLoadNotifier::dispatchWillSendRequest should not compare StringImpl directly
https://bugs.webkit.org/show_bug.cgi?id=63873
Summary
ResourceLoadNotifier::dispatchWillSendRequest should not compare StringImpl d...
Vsevolod Vlasov
Reported
2011-07-03 04:44:01 PDT
ResourceLoadNotifier::dispatchWillSendRequest should not compare StringImpl directly.
Attachments
Patch
(2.01 KB, patch)
2011-07-04 09:34 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2011-07-04 09:34:23 PDT
Created
attachment 99637
[details]
Patch
Alexey Proskuryakov
Comment 2
2011-07-04 12:47:30 PDT
Comment on
attachment 99637
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=99637&action=review
> Source/WebCore/ChangeLog:9 > + * loader/ResourceLoadNotifier.cpp: > + (WebCore::ResourceLoadNotifier::dispatchWillSendRequest):
Even for a very simple change like this, having per-function comments in ChangeLog would be helpful.
WebKit Review Bot
Comment 3
2011-07-04 13:28:26 PDT
Comment on
attachment 99637
[details]
Patch Clearing flags on attachment: 99637 Committed
r90376
: <
http://trac.webkit.org/changeset/90376
>
WebKit Review Bot
Comment 4
2011-07-04 13:28:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug