2011-07-04  Vsevolod Vlasov  <vsevik@chromium.org>

ResourceLoadNotifier::dispatchWillSendRequest should not compare StringImpl directly
        https://bugs.webkit.org/show_bug.cgi?id=63873

        Reviewed by Alexey Proskuryakov.

        * loader/ResourceLoadNotifier.cpp:
        (WebCore::ResourceLoadNotifier::dispatchWillSendRequest):

Canonical link: https://commits.webkit.org/79642@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90376 268f45cc-cd09-0410-ab3c-d52691b4dbfc